<resources>
    <string name="app_name">Zipcode</string>
    <string name="version">App VER 1.0\nData VER 1.0</string>
    <string name="enter_lead_zip_code">Enter Lead Zip Code</string>
    <string name="attention">ATTENTION!</string>
    <string name="enter_valid">Please enter a valid Zip Code value</string>
    <string name="immediate_support_a">Immediate support in all cities listed</string>
    <string name="immediate_support_b">Immediate support within 75 miles of city listed</string>
    <string name="immediate_support_c">1–2 months support within 75 miles of city listed — 20 Prescriptions per month needed</string>
    <string name="immediate_support_d">3–6 months support within 75 miles of city listed — 40 Prescriptions per month needed</string>
    <string name="please_remind">Please remind the person you are speaking with that:</string>
    <string name="all_prescriptions">\u2022\u00a0\u00a0All prescriptions need to be received by ROMTech 3–4 weeks prior to surgical date</string>
    <string name="all_deliveries">\u2022\u00a0\u00a0All deliveries to patients are pre-operative within 5 days of surgical date</string>
    <string name="first_accuangle">\u2022\u00a0\u00a0First AccuAngle is applied by surgeon or staff at time of surgery or before discharge</string>
    <string name="patients_will_be_provided">\u2022\u00a0\u00a0Patients will be provided with educational materials by surgeon or surgeon staff</string>
</resources>