<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <data>
        <import type="android.view.View"/>
        
        <variable
            name="searchResultsViewModel"
            type="com.romtech.zipcode.main.SearchResultsViewModel"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/lead_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{searchResultsViewModel.leadZipCodeAndClass}"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/search_results_line"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/immediate_support"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/immediate_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immediate_support"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/search_results_line"
            app:layout_constraintTop_toBottomOf="@+id/lead_class"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <View
            android:id="@+id/line"
            android:layout_width="460dp"
            android:layout_height="1dp"
            android:background="#007a99"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/immediate_support"
            app:layout_constraintBottom_toTopOf="@+id/please_remind"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/please_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_remind"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/search_results_line"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintBottom_toTopOf="@+id/all_prescriptions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/all_prescriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_prescriptions"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/search_results_line"
            app:layout_constraintTop_toBottomOf="@+id/please_remind"
            app:layout_constraintBottom_toTopOf="@+id/all_deliveries"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/all_deliveries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_deliveries"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/search_results_line"
            app:layout_constraintTop_toBottomOf="@+id/all_prescriptions"
            app:layout_constraintBottom_toTopOf="@+id/first_accuangle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/first_accuangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_accuangle"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/search_results_line"
            app:layout_constraintTop_toBottomOf="@+id/all_deliveries"
            app:layout_constraintBottom_toTopOf="@+id/patients_will_be_provided"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
        <TextView
            android:id="@+id/patients_will_be_provided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patients_will_be_provided"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/search_results_line"
            app:layout_constraintTop_toBottomOf="@+id/first_accuangle"
            app:layout_constraintBottom_toTopOf="@+id/ok_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        
        <android.widget.ImageView
            android:id="@+id/ok_button"
            android:layout_width="178dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ok_button"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/patients_will_be_provided"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>